Adição da 1a. versão do código com o zookeeper + parâmetro de execução do serviço + atualização do pom.xml para a dependência do zookeeper.