@@ -1,3 +1,3 @@
 #!/bin/bash
 
-java -server -Xms512m -Xmx1G -jar bionimbus-1.0-SNAPSHOT-bundle.jar
+java -server -Xms512m -Xmx1G -XX:-UseConcMarkSweepGC -jar bionimbus-1.0-SNAPSHOT-bundle.jar
